--- a/module2/modulestyles.css
+++ b/module2/modulestyles.css
@@ -1,18 +1,20 @@
 
 *{
 	box-sizing: border-box;
-	margin:10px 10px 10px 10px;
-	margin-bottom: 20px;
 }
 
-p{
+section{
 	color: black;
 	background-color: skyblue;
-	padding: 15px 15px 15px 15px;
-	margin: 10px 10px 10px 10px ;
+	padding: 15px;
+	margin: 10px;
 	border: solid 5px;
 	border-color: black;
 	font-family: monospace, serif, sans-serif;
+	top: 0px;
+        right: 0px;
+        position: relative;
+        overflow: auto;
 }
 
 h2{
@@ -20,21 +22,20 @@ h2{
  background-color: gold;
 font-size:20px;
 font-family: monospace, serif, sans-serif;
-border: 1px solid cyan;
-float: right;
-top: 0px;
-width:80px;
-height:50px;
-text-align: right;
-margin-bottom: 10px;
-margin-top: 10px;
-
+border: 5px solid black;
+	margin-top: 0;
+    margin-bottom: 0;
+    border-top: 0;
+    border-right: 0;
+    text-align: center;
+    top: 0px;
+    right: 0px;
+    width: 100px;
+    margin-left: auto;
+     position: absolute;
+     box-sizing: border-box;
+     overflow: auto;
 }
-
-title{
-	color:violet;
-}
-
 h1{
 
 	text-align: center;
@@ -42,140 +43,31 @@ h1{
 
 .row{
 	width: 100%;
-	margin:20px 20px 20px 20px;
-	margin-left:20px; 
+	
 }
 
 @media (min-width: 992px)
 {
-	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12{
-		float: left;
-		
-	}
-	.col-lg-1{
-		width: 8.33%;
-	}
-	.col-lg-2{
-		width: 16.66%;
-	}
+	
 	.col-lg-3{
 		width: 25%;
-	}
-	.col-lg-4{
-		width: 33%;
-	}
-	.col-lg-5{
-		width: 41.66%;
-	}
-	.col-lg-6{
-		width: 50%;
-	}
-	.col-lg-7{
-		width: 58.33%;
-	}
-	.col-lg-8{
-		width: 66.66%;
-	}
-	.col-lg-9{
-		width: 74.99%;
-	}
-	.col-lg-10{
-		width: 83.33%;
-	}
-	.col-lg-11{
-		width: 91.66%;
-	}
-	.col-lg-12{
-		width: 100%;
+		float:left;
 	}
 }
 
-
 @media (min-width: 768px) and (max-width: 991px)
 {
-	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12{
-		float: left;
-		border:1px solid black;
-	}
-	.col-lg-1{
-		width: 8.33%;
-	}
-	.col-lg-2{
-		width: 16.66%;
-	}
-	.col-lg-3{
-		width: 25%;
-	}
-	.col-lg-4{
-		width: 33%;
-	}
-	.col-lg-5{
-		width: 41.66%;
-	}
 	.col-lg-6{
 		width: 50%;
-	}
-	.col-lg-7{
-		width: 58.33%;
-	}
-	.col-lg-8{
-		width: 66.66%;
-	}
-	.col-lg-9{
-		width: 74.99%;
-	}
-	.col-lg-10{
-		width: 83.33%;
-	}
-	.col-lg-11{
-		width: 91.66%;
-	}
-	.col-lg-12{
-		width: 100%;
+		float: left;
 	}
 }
 
 
 @media (min-width: 767px)
 {
-	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12{
-		float: left;
-		border:1px solid black;
-	}
-	.col-lg-1{
-		width: 8.33%;
-	}
-	.col-lg-2{
-		width: 16.66%;
-	}
-	.col-lg-3{
-		width: 25%;
-	}
-	.col-lg-4{
-		width: 33%;
-	}
-	.col-lg-5{
-		width: 41.66%;
-	}
-	.col-lg-6{
-		width: 50%;
-	}
-	.col-lg-7{
-		width: 58.33%;
-	}
-	.col-lg-8{
-		width: 66.66%;
-	}
-	.col-lg-9{
-		width: 74.99%;
-	}
-	.col-lg-10{
-		width: 83.33%;
-	}
-	.col-lg-11{
-		width: 91.66%;
-	}
 	.col-lg-12{
 		width: 100%;
+		float: left;
 	}
 }
