--- a/module2/modulestyles.css
+++ b/module2/modulestyles.css
@@ -36,6 +36,10 @@ border: 5px solid black;
      box-sizing: border-box;
      overflow: auto;
 }
+
+body{
+	background-color: lightyellow;
+}
 h1{
 
 	text-align: center;
